<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/recipe_step_image"
        android:contentDescription="@string/content_description_image" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_step_video_frame"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
        <com.google.android.exoplayer2.ui.PlayerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recipe_step_video"
            app:shutter_background_color="@color/colorBackgroundDark"/>
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:visibility="gone"
        android:id="@+id/recipe_step_card"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_horizontal"
            android:id="@+id/recipe_step_description"
            android:textSize="@dimen/text_size"
            android:fontFamily="cursive"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="@integer/text_shadow"
            android:shadowDy="@integer/text_shadow"
            android:shadowRadius="@integer/text_shadow"/>
    </android.support.v7.widget.CardView>

</LinearLayout>
